# MainProject

./: .gitignore  CMakeLists.txt  README.md
lib1/: CMakeLists.txt
project1/: CMakeLists.txt
project1/doc/: README.txt
project1/examples/: README.txt
project1/project1/: main.cpp
project1/tests/: README.txt
